<resources>
    <string name="app_name">Khadamet DZ</string>
    <string name="google_map_id">AIzaSyCfhWhKEPefv2NZvi1L0-o3cWW-v5K33Xg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ic_activity_help_heading">Help</string>


    <string name="ic_bottom_nav_bus_reservation">Reservation</string>
    <string name="ic_bottom_nav_bus_ticket">Ticket</string>
    <string name="ic_bottom_nav_bus_info">Info</string>
    <string name="ic_bottom_nav_bus_help">Help</string>


    <string name="ic_main_category_list_bus_between_city">Trip</string>
    <string name="ic_main_category_list_bus_within_city">Urbain</string>
    <string name="ic_main_category_list_hotel">Hotel</string>
    <string name="ic_main_category_list_restaurant">Resto</string>
    <string name="ic_main_category_list_car_rental">Rent</string>
    <string name="ic_main_category_list_repairing">Repair</string>
    <string name="ic_main_category_list_hand_man_power">ManPower</string>
    <string name="ic_main_category_list_hospital">Doctor</string>
    <string name="ic_main_category_list_transport_goods">Transport</string>
    <string name="ic_main_category_list_car_repair">Cars Sales</string>
    <string name="ic_main_category_list_taxi">Taxi City</string>


    <string name="ic_main_frag_bus_4_heading_heading">Help Centre</string>
    <string name="ic_main_frag_bus_4_heading_content">For Any query or suggestion call or message us.
We are always ready to help you.</string>
    <string name="ic_main_frag_bus_4_call_heading">Call Us</string>
    <string name="ic_main_frag_bus_4_call_message">In case of any query call us.</string>
    <string name="ic_main_frag_bus_4_message_heading">Message Us</string>
    <string name="ic_main_frag_bus_4_message_message">In case of any query Message us.</string>

    <!--main dialog_help.xml-->
    <string name="dialog_help_email_hint_text">Email</string>
    <string name="dialog_help_heading_hint_text">Heading</string>
    <string name="dialog_help_message_hint_text">Message</string>
    <string name="dialog_help_button_send_text">Send</string>


    <!--food bottom navigation bar-->
    <string name="ic_bottom_nav_food_main">Restaurant</string>
    <string name="ic_bottom_nav_food_order">Order</string>
    <string name="ic_bottom_nav_food_pick_up">Pick Up</string>
    <string name="ic_bottom_nav_food_help">Help</string>


</resources>
