<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_dialog_help_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/dialog_edit_text_background"
            android:gravity="center"
            android:hint="@string/dialog_help_email_hint_text"
            android:maxLines="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id_dialog_help_heading"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/dialog_edit_text_background"
            android:gravity="center"
            android:hint="@string/dialog_help_heading_hint_text"
            android:maxLines="1"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/id_dialog_help_message"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dialog_edit_text_background"
            android:gravity="center_horizontal"
            android:hint="@string/dialog_help_message_hint_text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/id_dialog_help_send_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/dialog_help_button_send"
            android:text="@string/dialog_help_button_send_text"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>